--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
-/* 스타일을 여기에 작성할 거야 */
+/* 지도 꽉 채우기 */
+#map { width: 100%; height: 100%; min-height: 600px; }
+
+/* 스크롤 영역 보정 */
+html, body { height: 100%; }
