--- a/style.css
+++ b/style.css
@@ -1,35 +1,12 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
 #map {
   width: 100%;
   height: 100%;
-  min-height: 600px;
-  position: relative;
-  z-index: 1;
 }
-
-.leaflet-container,
-.leaflet-pane,
-.leaflet-map-pane,
-.leaflet-tile,
-.leaflet-overlay-pane,
-.leaflet-shadow-pane,
-.leaflet-marker-pane,
-.leaflet-popup-pane {
-  z-index: 1 !important;
-}
-
-#propertyFormLayer {
-  display: none;
-  position: fixed !important;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 99999 !important;
-}
-
-.fixed {
-  position: fixed !important;
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
